--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,11 +56,4 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Deploy to Render
-        env:
-          RENDER_API_KEY: ${{ secrets.RENDER_API_KEY }}
-          RENDER_SERVICE_ID: ${{ secrets.RENDER_SERVICE_ID }}
-        run: |
-          # Utilizar el API de Render para desplegar
-          curl -X POST "https://api.render.com/v1/services/$RENDER_SERVICE_ID/deploys" \
-            -H "Authorization: Bearer $RENDER_API_KEY" \
-            -H "Content-Type: application/json"
+        run: curl ${{ secrets.RENDER_HOOK }}
