Agrega flags en CURL de render en el cd

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -56,4 +56,4 @@ jobs:
           cache-to: type=gha,mode=max
 
       - name: Deploy to Render
-        run: curl ${{ secrets.RENDER_HOOK }}
+        run: curl -X POST ${{ secrets.RENDER_HOOK }}
